--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -12,5 +12,8 @@ h3 {
     line-height: 29px;
     color: black;
     text-align: center;
-    margin-bottom: 35px;
+}
+
+.advantages__name {
+    margin-top: 35px;
 }
