--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -15,8 +15,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 280px;
-        span {
+        width: 285px;
+    &__ico {
             width: 70px;
             height: 70px;
         }
