third section no adaptive

--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -3,7 +3,7 @@ h2 {
     font-size: 30px;
     text-align: center;
     color: black;
-    margin-top: 70px;
+    text-transform: uppercase;
 }
 
 h3 {
@@ -16,4 +16,9 @@ h3 {
 
 .advantages__name {
     margin-top: 35px;
+}
+
+.consultation__title {
+    color: white;
+    text-align: left;
 }
