--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -13,4 +13,10 @@
         width: 300px;
         height: 50px;
     }
+    &_submit {
+        border-radius: 5px;
+        width: 100%;
+        height: 58px;
+        margin-top: 20px;
+    }
 }
