--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,4 +14,5 @@ body {
 @import 'blocks/button';
 @import 'blocks/advantages';
 @import 'blocks/titles';
+@import 'blocks/consultation';
 @import 'base/media';
