--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,4 +15,5 @@ body {
 @import 'blocks/advantages';
 @import 'blocks/titles';
 @import 'blocks/consultation';
+@import 'blocks/forms';
 @import 'base/media';
