carousel 100% go next lecture

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,4 +16,5 @@ body {
 @import 'blocks/titles';
 @import 'blocks/consultation';
 @import 'blocks/forms';
+@import 'blocks/carousel';
 @import 'base/media';
