--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -97,6 +97,9 @@
         }
     }
     .promo {
+        &__title {
+            font-size: 38px;
+        }
         &__icons {
             margin-top: 30px;
             gap: 30px;
