--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -1,6 +1,6 @@
 .consultation {
     min-height: 680px;
-    background: url(../../img/third-section/background.png) center (center/cover) no-repeat;
+    background: url(../img/third-section/background.png) center (center/cover) no-repeat;
     padding: 100px 0 108px 0;
     &__desc {
         font-size: 20px;
