--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -31,6 +31,7 @@
             padding: 0;
             .slick-active {
                 button {
+                    font-size: 15px;
                     background: gray;
                     color: white;
                 }
@@ -38,11 +39,13 @@
             li {
                 width: 50px;
                 button {
+                    font-size: 15px;
                     width: 100%;
                     height: 50px;
                     border-radius: 100%;
                     border: none;
                     color: gray;
+                    background: whitesmoke;
                 }
             }
         }
