--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,4 +17,5 @@ body {
 @import 'blocks/consultation';
 @import 'blocks/forms';
 @import 'blocks/carousel';
+@import 'blocks/catalog';
 @import 'base/media';
