--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,4 +18,5 @@ body {
 @import 'blocks/forms';
 @import 'blocks/carousel';
 @import 'blocks/catalog';
+@import 'blocks/product';
 @import 'base/media';
