--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -19,4 +19,11 @@
         height: 58px;
         margin-top: 20px;
     }
+    &_product-buy {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 44px;
+        width: 135px;
+    }
 }
