some mini changes

--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -9,6 +9,9 @@
         padding: 0;
         margin: 40px 0 0 0;
     }
+    &__wrapper {
+        margin-top: 60px;
+    }
     &__tab {
         display: flex;
         justify-content: center;
