--- a/src/sass/blocks/_product.scss
+++ b/src/sass/blocks/_product.scss
@@ -3,6 +3,7 @@
     height: 442px;
     border: 1px #E8E8E8 solid;
     padding: 20px 20px 15px 20px;
+    position: relative;
     &__img {
         margin: 0 auto;
         width: 140px;
@@ -20,9 +21,22 @@
         margin-top: 10px;
     }
     &__footer {
+        width: 262px;
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
         display: flex;
         justify-content: space-between;
         align-items: center;
+        &::before {
+            content: '';
+            width: 260px;
+            height: 1px;
+            background: #E8E8E8;
+            position: absolute;
+            top: -17px;
+        }
         .catalog-item__prices {
             display: flex;
             flex-direction: column;
@@ -39,6 +53,42 @@
                     text-decoration: line-through;
                 }
             }
+        }
+    }
+    &__list {
+        width: 100%;
+        margin: 0;
+        transform: translateX(0);
+        padding-left: 0;
+        list-style-type: none;
+        li {
+            position: relative;
+            margin-bottom: 5px;
+            margin-left: 15px;
+            font-size: 14px;
+            color: #555555;
+            &:before {
+                content: ' ';
+                width: 5px;
+                height: 5px;
+                background-color: $main-color;
+                position: absolute;
+                top: 8px;
+                left: -14px;
+            }
+        }
+    }
+    &__back {
+        text-transform: uppercase;
+        color: $main-color;
+        display: block;
+        text-align: center;
+        position: relative;
+        transform: translateX(-50%);
+        left: 50%;
+        top: 30px;
+        &:hover {
+            color: $main-color;
         }
     }
 }
