--- a/src/sass/blocks/_product.scss
+++ b/src/sass/blocks/_product.scss
@@ -70,6 +70,7 @@
         transform: translateY(-300%);
         padding-left: 0;
         list-style-type: none;
+        transition: 0.5s all;
         &_active {
             display: block;
             transform: translateY(0);
@@ -108,6 +109,7 @@
         width: 100%;
         display: none;
         transform: translateY(-300%);
+        transition: 0.5s all;
         &_active {
             display: block;
             transform: translateY(0);
