--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -5,6 +5,7 @@
     border-radius: 5px;
     text-transform: uppercase;
     font-weight: 300;
+    cursor: pointer;
     &_header {
         width: 180px;
         height: 32px;
