--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -22,3 +22,14 @@ h3 {
     color: white;
     text-align: left;
 }
+
+.reviews-item__username {
+    text-align: left;
+}
+
+h4 {
+    color: #646464;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 22px;
+}
