--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,4 +19,5 @@ body {
 @import 'blocks/carousel';
 @import 'blocks/catalog';
 @import 'blocks/product';
+@import 'blocks/reviews';
 @import 'base/media';
