--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,4 +20,5 @@ body {
 @import 'blocks/catalog';
 @import 'blocks/product';
 @import 'blocks/reviews';
+@import 'blocks/footer';
 @import 'base/media';
