--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -31,5 +31,9 @@
         font-weight: 900;
         text-decoration: none;
         color: white;
+        &:hover {
+            color: white;
+            text-decoration: underline;
+        }
     }
 }
