--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,4 +21,6 @@ body {
 @import 'blocks/product';
 @import 'blocks/reviews';
 @import 'blocks/footer';
+@import 'blocks/modals';
+@import 'blocks/overlay';
 @import 'base/media';
