--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -1,10 +1,10 @@
 .advantages {
-    padding: 70px 0 60px 0;
+    padding: 70px 0 90px 0;
     min-height: 470px;
     background: #F6F6F6;
     &__wrapper {
         margin: 0 auto;
-        width: 950px;
+        width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
