--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -3,10 +3,13 @@
     display: flex;
     flex-direction: column;
     margin-top: 30px;
-    &__mr {
+    &_mr {
         margin-right: 0;
         align-items: center;
         justify-content: center;
+        form {
+            margin-right: 0;
+        }
     }
     input {
         border: none;
