--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -112,17 +112,28 @@
         }
     }
     .advantages {
-        padding: 70px 10px 30px 10px;
+        padding: 80px 10px 30px 10px;
     }
     .consultation {
-        padding: 70px 10px 30px 10px ;
+        padding: 80px 10px 30px 10px ;
         &__desc {
             width: auto;
+        }
+    }
+    .reviews {
+        .reviews-item {
+            gap: 10px;
         }
     }
     .footer {
         &__info {
             width: 100%;
+        }
+    }
+    .modal {
+        &__close {
+            top: 0;
+            right: 20px;
         }
     }
 }
@@ -149,6 +160,12 @@
         }
         &__wrapper {
             margin-top: 30px;
+        }
+    }
+    .modal {
+        width: auto;
+        &__close {
+            right: 35px;
         }
     }
 }
