--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -19,6 +19,7 @@
         color: white;
         line-height: 20px;
         margin-bottom: 0;
+        text-align: center;
         }
     }
     &__phone {
