--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -4,6 +4,7 @@ h2 {
     text-align: center;
     color: black;
     text-transform: uppercase;
+    margin-bottom: 0;
 }
 
 h3 {
@@ -12,6 +13,7 @@ h3 {
     line-height: 29px;
     color: black;
     text-align: center;
+    margin-bottom: 0;
 }
 
 .advantages__name {
