--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -22,8 +22,10 @@
     input::-webkit-outer-spin-button,
     input::-webkit-inner-spin-button {
         -webkit-appearance: none;
+        appearance: none;
     }
     input[type=number] {
         -moz-appearance:textfield; /* Firefox */
+        appearance: none;
     }
 }
