--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,4 +23,5 @@ body {
 @import 'blocks/footer';
 @import 'blocks/modals';
 @import 'blocks/overlay';
+@import 'blocks/scroll-up';
 @import 'base/media';
