--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,4 +24,5 @@ body {
 @import 'blocks/modals';
 @import 'blocks/overlay';
 @import 'blocks/scroll-up';
+@import 'base/animation';
 @import 'base/media';
