--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -24,5 +24,6 @@ body {
 @import 'blocks/modals';
 @import 'blocks/overlay';
 @import 'blocks/scroll-up';
+@import 'blocks/map';
 @import 'base/animation';
 @import 'base/media';
