loading speed is updated

--- a/src/sass/libs/_fonts.scss
+++ b/src/sass/libs/_fonts.scss
@@ -1,5 +1,6 @@
 @font-face {
     font-family: 'Museo Sans Cyrl';
+    font-display: swap;
     src: url('../fonts/MuseoSansCyrl-700.eot') format('eot'),
     url('../fonts/MuseoSansCyrl-700.ttf') format('ttf'),
     url('../fonts/MuseoSansCyrl-700.woff') format('woff');
@@ -8,6 +9,7 @@
 
 @font-face {
     font-family: 'Museo Sans Cyrl';
+    font-display: swap;
     src: url('../fonts/MuseoSansCyrl-500.eot') format('eot'),
     url('../fonts/MuseoSansCyrl-500.ttf') format('ttf'),
     url('../fonts/MuseoSansCyrl-500.woff') format('woff');
@@ -16,6 +18,7 @@
 
 @font-face {
     font-family: 'Museo Sans Cyrl';
+    font-display: swap;
     src: url('../fonts/MuseoSansCyrl-300.eot') format('eot'),
     url('../fonts/MuseoSansCyrl-300.ttf') format('ttf'),
     url('../fonts/MuseoSansCyrl-300.woff') format('woff');
