--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,9 @@
+@import 'libs/bootstrap-reboot.min';
+@import 'libs/fonts';
+@import 'libs/slick';
+@import 'libs/animate.min';
+
+
 @import 'base/variables';
 
 body {
